--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rock Paper Scissors Lizard Spock. Simple online interactive game">
+    <!--Keywords-->
+    <meta name="keywords" content="Rock, paper, scissors, lizard, Spock, online, game, play">
     <!-- Google fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 
 <body>
     <a href="index.html">
-        <h1 class="heading">Rock Paper Scissors Lizard Spock</h1>
+            <h1 class="heading">Rock Paper Scissors Lizard Spock</h1>
     </a>
     <!-- Anchor, click to open box with instructions -->
     <div id="instructions"><button id="instructions-button">
