styling added to error404 page

--- a/error404.html
+++ b/error404.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="assets/css/style.css"> 
     <title>404 Not Found</title>
 </head>
-<body>
+<body id="error-body">
     <div id="error-container">
         <h1>Error 404: Not Found</h1>
-        <p>Sorry, the page you are looking for could not be found. Please click below to return to the main game page.</p>
+        <p>Sorry, the page you are looking for could not be found.
+            Please click below to return to the main game page.</p>
         <button id="error-page-return">Return to Game</button>
     </div>
     <script src="assets/js/script.js"></script>
