errorScript.js added, only contains js for the error html page

--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
             Please click below to return to the main game page.</p>
         <button id="error-page-return">Return to Game</button>
     </div>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/errorScript.js"></script>
 </body>
 
 </html>
