--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <h1 class="heading">Rock Paper Scissors Lizard Spock</h1>
         </a>
     
-        <div id="instructions"><button id="instructions-button">
+        <div id="instructions">
+            <button id="instructions-button">
             Instructions
             </button></div>
         <div id="instructions-explained" style="display: none;">
