--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                 <h2>Score</h2>
                 <div id="scoreboard-2p">
                     <p class="scores">
-                        Player 1 : <span id="player-1-score-2p">0</span> - <span id="player-2-score-2p">0</span> :
-                        Player 2
+                        <span id="player-1-name">Player 1 : </span><span id="player-1-score-2p">0</span> - <span id="player-2-score-2p">0</span>
+                        <span id="player-2-name"> : Player 2</span>
                     </p>
                 </div>
                 <button id="next-round-button">Next Round</button>
