changed margins of buttons for layout to be more suited to all screen sizes

--- a/404.html
+++ b/404.html
@@ -8,11 +8,13 @@
 </head>
 <body id="error-body">
     <div id="error-container">
+        <!-- Error message that appears on screen -->
         <h1>Error 404: Not Found</h1>
         <p>Sorry, the page you are looking for could not be found.
             Please click below to return to the main game page.</p>
         <button id="error-page-return">Return to Game</button>
     </div>
+    <!-- .js code that only controls the error page -->
     <script src="assets/js/errorScript.js"></script>
 </body>
 
