start of styling for PvC on mobile screens

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="game-area" id="game-area">
             <!-- Area encasing all interactive parts of the player -->
             <div class="player-area" id="player-area">
-                <h2 class="player-heading" id="player-heading">Player:</h2>
+                <h2 class="player-heading" id="player-heading">Player, make your choice:</h2>
                 <div class="player-choices" id="player-choices">
                     <!-- The disordered elements here are in theis order to be consistent both with their
                     indices in the javascript as well as the game's title -->
@@ -83,7 +83,7 @@
             </div>
             <!-- Area encasing all interactive parts of the computer -->
             <div class="player-area" id="computer-area">
-                <h2 class="player-heading" id="computer-heading">Computer:</h2>
+                <h2 class="player-heading" id="computer-heading">Computer chooses:</h2>
                 <div id="computer-choice">
                     <!-- Button is disabled since the player doesn't choose the computers choice. -->
                     <!-- Button is used to be able to style all buttons/images more generally -->
