--- a/index.html
+++ b/index.html
@@ -139,9 +139,8 @@
                 <h2>Score</h2>
                 <div id="scoreboard-2p">
                     <p class="scores">
-                        <span id="player-1-name">Player 1 : </span><span id="player-1-score-2p">0</span> - <span id="player-2-score-2p">0</span>
-                        <span id="player-2-name"> : Player 2</span>
-                    </p>
+                        <span id="player-1-name">Player 1 : </span><span id="player-1-score-2p">0</span><br>
+                        <span id="player-2-name">Player 2 : </span><span id="player-2-score-2p">0</span>
                 </div>
                 <button id="next-round-button">Next Round</button>
             </div>
