small tweaks to styling in mobile

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
                     <span id="result"></span>
                 </div>
                 <div class="score-area" id="score-area">
-                    <h2>Score</h2>
+                    <h2 class="score-h2">Score</h2>
                     <div id="scoreboard">
-                        <p class="scores">Player : <span id="player-score">0</span> - <span
-                                id="computer-score">0</span><span id="computer-name"> : Computer</span> </span>
+                        <p class="scores">Player  :  <span id="player-score">0</span> <br>
+                            <span id="computer-name">Computer  :  </span> <span id="computer-score">0</span>
                         </p>
                     </div>
                 </div>
@@ -136,8 +136,9 @@
                 <div id="results-area-2p" class="results-area">
                     <span id="result-2p"></span>
                 </div>
-                <h2>Score</h2>
+                
                 <div id="scoreboard-2p">
+                    <h2 class="score-h2">Score</h2>
                     <p class="scores">
                         <span id="player-1-name">Player 1 : </span><span id="player-1-score-2p">0</span><br>
                         <span id="player-2-name">Player 2 : </span><span id="player-2-score-2p">0</span>
