favicon added. Content added to README

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="description" content="Rock Paper Scissors Lizard Spock. Simple online interactive game">
     <!--Keywords-->
     <meta name="keywords" content="Rock, paper, scissors, lizard, Spock, online, game, play">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <!--Link to stylesheet-->
     <!-- Google fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
@@ -35,11 +40,15 @@
                 If you're new to this, fear not; we've got you covered. <br><br> Here's how it works:<br>
                 Rock crushes Scissors, Scissors cuts Paper, Paper covers Rock, Rock crushes Lizard,
                 Lizard poisons Spock, Spock smashes Scissors, Scissors decapitate Lizard, Lizard eats Paper, Paper
-                disproves Spock, and Spock vaporizes Rock. <br><br> To see that more clearly, have a look at this handy diagram. In the diagram, if A is pointing at B, then A beats B.
+                disproves Spock, and Spock vaporizes Rock. <br><br> To see that more clearly, have a look at this handy
+                diagram. In the diagram, if A is pointing at B, then A beats B.
                 <br><br>
-                <img src="assets/images/gamediagram.webp" alt="Diagram showing which choice beats which other choices." id="game-diagram">
+                <img src="assets/images/gamediagram.webp" alt="Diagram showing which choice beats which other choices."
+                    id="game-diagram">
                 <br>
-                Firstly, choose whether you would like to play against a friend, or against the computer. Then follow the prompts that appear on screen. 
+                Firstly, choose whether you would like to play against a friend, or against the computer. Then follow
+                the prompts that appear on screen. If you are playing against the computer, the first to 10 wins.
+                If you are playing against a friend, then the first to 3 wins.
                 To make your choice, simply click on the icon representing it. <br><br>If you
                 find yourself wanting a fresh start, no worries! Simply reload the page by pressing the title, and you
                 can start a new game from scratch. <br><br>
