fixing small errors in HTML

--- a/index.html
+++ b/index.html
@@ -159,23 +159,23 @@
                     <!-- The disordered elements here are in theis order to be consistent both with their
                     indices in the javascript as well as the game's title -->
                     <button style="order: 2" class="player-choices-buttons" id="player-2-choice-button-0">
-                        <img class="player-choices-images" id="player-choice-image-0" src="assets/images/scissors.png"
+                        <img class="player-choices-images" src="assets/images/scissors.png"
                             alt="Scissors image">
                     </button>
                     <button style="order: 3" class="player-choices-buttons" id="player-2-choice-button-1">
-                        <img class="player-choices-images" id="player-choice-image-1" src="assets/images/lizard.png"
+                        <img class="player-choices-images" src="assets/images/lizard.png"
                             alt="Lizard image">
                     </button>
                     <button style="order: 1" class="player-choices-buttons" id="player-2-choice-button-2">
-                        <img class="player-choices-images" id="player-choice-image-2" src="assets/images/paper.png"
+                        <img class="player-choices-images" src="assets/images/paper.png"
                             alt="Paper image">
                     </button>
                     <button style="order: 4" class="player-choices-buttons" id="player-2-choice-button-3">
-                        <img class="player-choices-images" id="player-choice-image-3" src="assets/images/spock.png"
+                        <img class="player-choices-images" src="assets/images/spock.png"
                             alt="Spock image">
                     </button>
                     <button style="order: 0" class="player-choices-buttons" id="player-2-choice-button-4">
-                        <img class="player-choices-images" id="player-choice-image-4" src="assets/images/rock.png"
+                        <img class="player-choices-images" src="assets/images/rock.png"
                             alt="Rock image">
                     </button>
                 </div>
