--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
         <p>Click to see result</p>
         <button id="click-to-show-button" class="make-choice-button">RESULT</button>
     </div>
+    <footer>
+        <button>Restart Game</button>
+    </footer>
     <!-- script with all .js for the index.html page -->
     <script src="assets/js/script.js"></script>
 </body>
