added subheading to new game buttons for clarity

--- a/index.html
+++ b/index.html
@@ -170,14 +170,19 @@
     </div>
     <!-- Appears when page is loaded to initiate PvC of PvP game -->
     <div id="start-game-box" class="play-game-box">
-        <button class="play-against-computer">Play against the computer</button>
-        <button class="play-against-friend">Play against a friend</button>
+        <button class="play-against-computer">Play against the computer<br>
+            <span class="button-subheading">[First to 10 wins]</span>
+        </button>
+        <button class="play-against-friend">Play against a friend<br>
+            <span class="button-subheading">[First to 3 wins]</span></button>
     </div>
     <!-- Game over text in PvC, along with buttons to initiate new game -->
     <div id="game-over-box" class="play-game-box" style="display: none;">
         <p id="game-over-text">Game over win or lose text here</p>
-        <button class="play-against-computer">Play against the computer</button>
-        <button class="play-against-friend">Play against a friend</button>
+        <button class="play-against-computer">Play against the computer<br>
+            <span class="button-subheading">[First to 10 wins]</span></button>
+        <button class="play-against-friend">Play against a friend<br>
+            <span class="button-subheading">[First to 3 wins]</span></button>
     </div>
     <!-- Pop up box, instructing player 1 to take turn -->
     <div id="player-1-make-choice" style="display: none;" class="play-game-box">
@@ -192,8 +197,10 @@
     <!-- Game over text in PvP, along with buttons to initiate new game -->
     <div id="game-over-box-two" class="play-game-box" style="display: none;">
         <p id="game-over-text-two">Game over win or lose text here TWO PLAYER</p>
-        <button class="play-against-computer">Play against the computer</button>
-        <button class="play-against-friend">Play against a friend</button>
+        <button class="play-against-computer">Play against the computer<br>
+            <span class="button-subheading">[First to 10 wins]</span></button>
+        <button class="play-against-friend">Play against a friend<br>
+            <span class="button-subheading">[First to 3 wins]</span></button>
     </div>
     <!-- Pop up box, instructing players to click and see result -->
     <div id="click-to-show" style="display: none;" class="play-game-box">
