slight adjustments to Introductions styling and content

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 disproves Spock, and Spock vaporizes Rock. <br><br> To see that more clearly, have a look at this handy
                 diagram. In the diagram, if A is pointing at B, then A beats B.
                 <br><br>
-                <img src="assets/images/gamediagram.webp" alt="Diagram showing which choice beats which other choices."
+                <img src="assets/images/gamediagram.webp" alt="Diagram showing which choice beats which other choices in the game."
                     id="game-diagram">
                 <br>
                 Firstly, choose whether you would like to play against a friend, or against the computer. Then follow
                 the prompts that appear on screen. If you are playing against the computer, the first to 10 wins.
                 If you are playing against a friend, then the first to 3 wins.
-                To make your choice, simply click on the icon representing it. <br><br>If you
+                To make your selection, simply click on the icon representing your choice. <br><br>If you
                 find yourself wanting a fresh start, no worries! Simply reload the page by pressing the title, and you
                 can start a new game from scratch. <br><br>
                 Have fun!
