restructuring and commenting in style.css

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 disproves Spock, and Spock vaporizes Rock. <br><br> To see that more clearly, have a look at this handy
                 diagram. In the diagram, if A is pointing at B, then A beats B.
                 <br><br>
-                <img src="assets/images/gamediagram.webp" alt="Diagram showing which choice beats which other choices in the game."
-                    id="game-diagram">
+                <img src="assets/images/gamediagram.webp"
+                    alt="Diagram showing which choice beats which other choices in the game." id="game-diagram">
                 <br>
                 Firstly, choose whether you would like to play against a friend, or against the computer. Then follow
                 the prompts that appear on screen. If you are playing against the computer, the first to 10 wins.
