added comments within larger functions in script.js. Added styling to button-subheadings

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <!--Link to stylesheet-->
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- Google fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
     <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 
@@ -171,18 +171,18 @@
     <!-- Appears when page is loaded to initiate PvC of PvP game -->
     <div id="start-game-box" class="play-game-box">
         <button class="play-against-computer">Play against the computer<br>
-            <span class="button-subheading">[First to 10 wins]</span>
+            <span class="button-subheading">First to 10 wins</span>
         </button>
         <button class="play-against-friend">Play against a friend<br>
-            <span class="button-subheading">[First to 3 wins]</span></button>
+            <span class="button-subheading">First to 3 wins</span></button>
     </div>
     <!-- Game over text in PvC, along with buttons to initiate new game -->
     <div id="game-over-box" class="play-game-box" style="display: none;">
         <p id="game-over-text">Game over win or lose text here</p>
         <button class="play-against-computer">Play against the computer<br>
-            <span class="button-subheading">[First to 10 wins]</span></button>
+            <span class="button-subheading">First to 10 wins</span></button>
         <button class="play-against-friend">Play against a friend<br>
-            <span class="button-subheading">[First to 3 wins]</span></button>
+            <span class="button-subheading">First to 3 wins</span></button>
     </div>
     <!-- Pop up box, instructing player 1 to take turn -->
     <div id="player-1-make-choice" style="display: none;" class="play-game-box">
@@ -198,9 +198,9 @@
     <div id="game-over-box-two" class="play-game-box" style="display: none;">
         <p id="game-over-text-two">Game over win or lose text here TWO PLAYER</p>
         <button class="play-against-computer">Play against the computer<br>
-            <span class="button-subheading">[First to 10 wins]</span></button>
+            <span class="button-subheading">First to 10 wins</span></button>
         <button class="play-against-friend">Play against a friend<br>
-            <span class="button-subheading">[First to 3 wins]</span></button>
+            <span class="button-subheading">First to 3 wins</span></button>
     </div>
     <!-- Pop up box, instructing players to click and see result -->
     <div id="click-to-show" style="display: none;" class="play-game-box">
