--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 If you're new to this, fear not; we've got you covered. <br><br> Here's how it works:<br>
                 Rock crushes Scissors, Scissors cuts Paper, Paper covers Rock, Rock crushes Lizard,
                 Lizard poisons Spock, Spock smashes Scissors, Scissors decapitate Lizard, Lizard eats Paper, Paper
-                disproves Spock, and Spock vaporizes Rock. <br><br> To see that more clearly, have a look at this handy
+                disproves Spock, and Spock vaporises Rock. <br><br> To see that more clearly, have a look at this handy
                 diagram. In the diagram, if A is pointing at B, then A beats B.
                 <br><br>
                 <img src="assets/images/gamediagram.webp"
@@ -50,7 +50,7 @@
                 the prompts that appear on screen. If you are playing against the computer, the first to 10 wins.
                 If you are playing against a friend, then the first to 3 wins.
                 To make your selection, simply click on the icon representing your choice. <br><br>If you
-                find yourself wanting a fresh start, no worries! Simply reload the page by pressing the title, and you
+                find yourself wanting a fresh start, no worries! Simply reload the page by pressing the page's title at the top, and you
                 can start a new game from scratch. <br><br>
                 Have fun!
             </p>
