fix: return to game button in 404 was not functioning due to incorrectly named script. Name fixed, button functions as it should

--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
         <button id="error-page-return">Return to Game</button>
     </div>
     <!-- .js code that only controls the error page -->
-    <script src="assets/js/errorScript.js"></script>
+    <script src="assets/js/error-script.js"></script>
 </body>
 
 </html>
