--- a/404.html
+++ b/404.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rock Paper Scissors Lizard Spock. Simple online interactive game">
+    <!--Keywords-->
+    <meta name="keywords" content="Rock, paper, scissors, lizard, Spock, online, game, play">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <!--Link to stylesheet-->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Google fonts -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css"> 
-    <title>404 Not Found</title>
+    <title>404: Not Found</title>
 </head>
 <body id="error-body">
     <div id="error-container">
         <!-- Error message that appears on screen -->
         <h1>Error 404: Not Found</h1>
-        <p>Sorry, the page you are looking for could not be found.
+        <p>Sorry, the page you are looking for could not be found.<br><br>
             Please click below to return to the main game page.</p>
         <button id="error-page-return">Return to Game</button>
     </div>
